# nvid_fan_control

./: Cargo.toml  Notice  README.md
src/: cargo_old  lib.rs  main.rs  main_threaded.rs  sc2.php  start_charting.php
src/charts/: charting_actual.rs  mod.rs
src/control/: .mod.rs.swp  mod.rs  mod_old.rs
src/nvid/: mod.rs  nvid_control.rs  nvid_settings.rs
src/utility/: mod.rs  utility.rs
